--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div>
+<div style="padding: 5px;">
+<ul class="nav nav-tabs">
+<li routerLinkActive="active"><a routerLink="home">Home</a></li>
+<li routerLinkActive="active"><a routerLink="Employees">Employees</a></li>
+</ul>
     
 <router-outlet></router-outlet>
 </div>
